\name{NEWS}
\title{brms News}
\encoding{UTF-8}

\section{CHANGES IN VERSION 2.0.0}{
  This is the second major release of \code{brms}. The main
  new feature are generalized multivariate models, which now
  support everything already possible in univariate models, 
  but with multiple response variables. Further, the internal
  structure of the package has been improved considerably to be 
  easier to maintain and extend in the future.
  In addition, most deprecated functionality and arguments have 
  been removed to provide a clean new start for the package.
  Models fitted with \pkg{brms} 1.0 or higher should remain
  fully compatible with \pkg{brms} 2.0.
  \subsection{NEW FEATURES}{
    \itemize{
      \item Add support for generalized multivariate models,
      where each of the univariate models may have a different 
      family and autocorrelation structure. 
      Residual correlations can be estimated for multivariate
      \code{gaussian} and \code{student} models. All features
      supported in univariate models are now also available in
      multivariate models. (#3)
      \item Specify different formulas for different
      categories in \code{categorical} models.
      \item Add weakly informative default priors for the 
      parameter class \code{Intercept} to improve convergence 
      of more complex distributional models.
      \item Optionally display the MC standard error in the
      \code{summary} output. (#280)
      \item Add argument \code{re.form} as an alias of 
      \code{re_formula} to the methods \code{posterior_predict},
      \code{posterior_linpred}, and \code{predictive_error}
      for consistency with other packages making use of
      these methods. (#283)
    }
  }
  \subsection{OTHER CHANGES}{
    \itemize{
      \item Refactor many parts of the package to make
      it more consistent and easier to extend.
      \item Show the link functions of all
      distributional parameters in the \code{summary}
      output. (#277)